# notes

./: .build.yml  .gitignore  .gitmodules  .hypb  .norg  202206010000-Emacs.md  20230502t232947--bactériologie.md  2024-05-01.md  202404281956 - Plotting.md  202404281956-Plotting.md  202404282000 - Makie.md  202404282000-Vega-lite.md  202404282216 - Gentoo.md  202404282218-Gentoo packaging.md  202404282222 - Gentoo ebuild Julia.md  202404282229 - Gestion bibliographie.md  202404282229-Gestion bibliographie.md  202404282230 - Bibliographie avec emacs.md  202404282236 - Bibliographie avec papis.md  202404282236-Bibliographie avec papis.md  202404292258 - Typst.md  AFP.norg  ARID4A.norg  Alacritty.org  Articles Bisonex.org  Auerbach.md  Auerbach.org  Bibliographie avec emacs.md  Bibliographie avec emacs.org  Bibliographie avec papis.md  Bibliographie avec papis.org  CLI.md  Cecil-Goldman.md  Cecil-Goldman.org  Configuration freebsd.org  Débugger un paquet nix.org  Emacs.md  Environnement_Python_avec nix.org  Escherischia coli producteurs de shigatoxine.norg  Fosdem 2024.org  (+841 more)
blog/: Main.hs  blog.cabal  flake.nix
blog/files/: movie.html
blog/files/mandelbrot/: Mandelbrot
blog/templates/: default.html
site/: .gitignore  Makefile  README.md  about.md  blog.cabal  config.toml  cooking.md  japonais.md  site.hs
site/css/: sakura.css
site/medecine/: bacteriologie.md  cofrac.md  hematologie.md  immuno-hemato.md  virologie.md
site/posts/: 2020-10-01-mail.md  2021-01-02-command-line.md  2021-03-01-stream-media.md
site/sass/: main.scss
site/templates/: notes.html
(+3832 files in other folders)
