cabal-version:       2.4

name:                blog
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause

executable hakyll-site
  main-is:           Main.hs
  hs-source-dirs:    .
  build-depends:     base >= 4.8
                   , hakyll >= 4.15
                   , pandoc == 2.17.*
                   , slugger >= 0.1.0.1
                   , text >= 1.2
  ghc-options:       -Wall -threaded
  default-language:  Haskell2010
