cabal-version:       2.4

name:                blog
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause

executable hakyll-site
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base
                   , filepath
                   , hakyll
                   , split
  ghc-options:       -Wall -threaded
  default-language:  Haskell2010
